<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculadora</string>
    <string name="Signo_division">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplicar">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="resta">-</string>
    <string name="limpiar">C</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="suma">+</string>
    <string name="resultado">0</string>
</resources>